--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ layout: default
         <div class="about-grid">
             <div class="about-photo">
                 <!-- Replace with your actual headshot -->
-                <img src="https://via.placeholder.com/400x400/667eea/ffffff?text=Your+Photo" alt="Elliott Mattice" class="headshot">
+                <img src="https://github.com/elliottmattice/elliottmattice.work/blob/main/assets/images/Hero_Image_Transparent%20-%20Copy.webp" alt="Elliott Mattice" class="headshot">
             </div>
             <div class="about-content">
                 <div class="section-label">About</div>
