--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ layout: default
         <div class="about-grid">
             <div class="about-photo">
                 <!-- Replace with your actual headshot -->
-                <img src="/assets/images/Headshot.webp" alt="Elliott Mattice" class="headshot">
+               <img src="{{ '/assets/images/Headshot.webp' | relative_url }}" alt="Elliott Mattice" class="headshot">
             </div>
             <div class="about-content">
                 <div class="section-label">About</div>
