--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@ layout: default
 <!-- Hero -->
 <section class="hero">
     <!-- Video Background (add your video file to assets/videos/) -->
-    <!-- <video autoplay muted loop playsinline class="hero-video-bg">
+    <video autoplay muted loop playsinline class="hero-video-bg">
         <source src="/assets/videos/Background_Vid.webm" type="video/webm">
-    </video> -->
+    </video>
     <div class="hero-overlay"></div>
     
     <div class="container hero-content">
