--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ layout: default
 <section class="hero">
     <!-- Video Background (add your video file to assets/videos/) -->
     <video autoplay muted loop playsinline class="hero-video-bg">
-        <source src="/assets/videos/Background_Vid.webm" type="video/webm">
+        <source src="{{ '/assets/videos/Background_Vid.webm' | relative_url }}" type="video/webm">
     </video>
     <div class="hero-overlay"></div>
     
